--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             localStorage.setItem('name', name);
             localStorage.setItem('age', age);
 
-            window.Telegram.WebApp.CloudStorage.setItem('key1','value1');
+            // window.Telegram.WebApp.CloudStorage.setItem('key1','value1');
 
             // alert('Data saved to localStorage!');
         }
